# novelupdates

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  recipe.json
admin/: package-lock.json  package.json
admin/src/: App.tsx
admin/src/resources/: chapter.tsx  group.tsx  novel.tsx  novel_type.tsx  source.tsx  tag.tsx  type.tsx
codegen/: answers.json  copy_entities.bash  generate_project.bash  generate_project_axum_local.bash
codegen/entities/: artist.json  author.json  chapter.json  group.json  novel.json  publisher.json  reading-list.json  review.json  source.json  tag.json  type.json  user.json
migrations/: 00001_init_db.sql
src/: lib.rs  main.rs  server.rs
src/controllers/: artist.rs  author.rs  chapter.rs  group.rs  mod.rs  novel.rs  publisher.rs  reading_list.rs  review.rs  source.rs  tag.rs  type.rs  user.rs
src/models/: artist.rs  artist_novel.rs  author.rs  author_novel.rs  chapter.rs  chapter_novel.rs  group.rs  mod.rs  novel.rs  novel_publisher.rs  novel_reading_list.rs  novel_tag.rs  publisher.rs  reading_list.rs  review.rs  source.rs  tag.rs  type.rs  user.rs
tests/: integration_tests.rs  role_e2e_tests.rs  rss_e2e_tests.rs  tag_e2e_tests.rs
tests/common/: mod.rs
